--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,17 +14,17 @@
 
 <!--nav:导航部分-->
 <!--条:segment;黑色:inverted反转色-->
-<nav class="ui attached segment m-padded-tb-min" style="background: #393D49;">
+<nav class="ui attached segment m-padded-tb-min m-shadow-small" style="background: #393D49;">
     <div class="ui container">
         <!--组件部分-->
         <div class="ui inverted secondary stackable menu fluid large">
             <!--五个标志部分-->
-            <h1 class="ui teal header item">MBlog</h1>
-            <a href="#" class="item m-text-lfat m-mobile-hide" id="002"><i class="home icon"></i>首页</a>
+            <a href="#"><h1 class="ui teal header item">MBlog</h1></a>
+            <a href="#" class="active item m-text-lfat m-mobile-hide" id="002"><i class="home icon"></i>首页</a>
             <a href="#" class="item m-text-lfat m-mobile-hide" id="003"><i class="idea icon"></i>分类</a>
             <a href="#" class="item m-text-lfat m-mobile-hide" id="004"><i class="tags icon"></i>标签</a>
             <a href="#" class="item m-text-lfat m-mobile-hide" id="005"><i class="clone icon"></i>归档</a>
-            <a href="#" class="item m-text-lfat m-mobile-hide" id="006"><i class="info icon"></i>关于我</a>
+            <a href="#" class="item m-text-lfat m-mobile-hide" id="006"><i class="info icon"></i>关于网站</a>
             <!--搜索栏-->
             <div class="right item m-mobile-hide" id="007">
                 <div class="ui icon input">
@@ -34,18 +34,15 @@
             </div>
         </div>
     </div>
-
-        <a href="#" class="ui menu icon button m-right-top m-mobile-show"  id="001" style="background: #393D49;">
-            <div class="ui vertical animated button tiny">
+    <a href="#" class="ui menu icon button m-right-top m-mobile-show" id="001" style="background: #393D49;">
+        <div class="ui vertical animated button tiny">
             <div class="hidden content ">菜单</div>
             <div class="visible content ">
                 <i class="sidebar icon"></i>
             </div>
-            </div>
-        </a>
-
+        </div>
+    </a>
 </nav>
-
 
 <!--中间内容-->
 <div class="m-padded-tb-medium">
@@ -55,10 +52,10 @@
             <!--左边博客列表-->
             <div class="eleven wide column ">
                 <!--中间的顶部-->
-                <div class="ui  segment">
+                <div class="ui teal segment">
                     <div class="ui two column middle aligned grid">
                         <div class="column">
-                            <h2 class="ui teal header m-text-spaced ">MBlog</h2>
+                            <h2 class="ui teal header m-text-spaced ">Blog</h2>
                         </div>
                         <div class="right aligned column">
                             共 <h2 class="ui orange header m-inline-block m-text-thin" th:text="${pageInfo.total}">
@@ -94,7 +91,7 @@
                                             <div class="item">
                                                 <!--发布时间-->
                                                 <i class="clock icon vertical-align"></i>
-                                                <span  th:text="${#dates.format(blog.updateTime,'yyyy-MM-dd')}">2020-04-09</span>
+                                                <span th:text="${#dates.format(blog.updateTime,'yyyy-MM-dd')}">2020-04-09</span>
                                             </div>
                                             <div class="item">
                                                 <!--浏览次数-->
@@ -209,9 +206,11 @@
                         </div>
                     </div>
                 </div>
+
                 <!--中间的尾部/翻页-->
-                <div class="ui bottom attached vertical segment">
-                    <div class="ui middle aligned two column grid ">
+
+                <div class="ui bottom attached vertical segment ">
+                    <div class="ui middle aligned two column grid  ">
                         <!--左按钮-->
                         <div class="left column" align="right">
                             <div class="ui animated item button">
@@ -224,10 +223,11 @@
                                 </div>
                             </div>
                         </div>
+
                         <!--右按钮-->
                         <div class="right column" align="left">
                             <div class="ui animated item button">
-                                <div class=" visible content ">
+                                <div class="visible content">
                                     <a class="ui tiny m-text-max" style="color: #393D49"
                                        th:href="@{/(pageNum=${pageInfo.hasNextPage}?${pageInfo.nextPage}:${pageInfo.pages})}">下一页</a>
                                 </div>
@@ -252,11 +252,69 @@
                             <div class="ui sliver segment">
                                 <h1 class="ui header centered m-text-spaced m-text-lfat m-text-small-lined">PanYB</h1>
                             </div>
+                            <!--标语-->
                             <h3 class="ui header centered m-text-spaced m-text-thin m-max-opacity m-text-small-lined">
                                 每天进步一点...</h3>
-                            <h5 class="ui header centered m-text-spaced m-text-thin m-min-opacity m-text-small-lined"><i
-                                    class="location arrow icon"></i>浙江-台州</h5>
+                            <h5 class="ui header centered m-text-spaced m-text-thin m-min-opacity m-text-small-lined">
+                                <i class="location arrow icon small"></i>浙江-台州</h5>
+                            <!--分割线-->
+                            <div class="ui horizontal divider">
+                                -
+                            </div>
+                            <div class="ui container center aligned">
+                                <!--github联系方式链接-->
+                                <button id="git" class="ui circular button icon ">
+                                    <i class="github icon black large"></i>
+                                </button>
+                                <!--点击上面的弹出的内容-->
+                                <div class="ui git flowing popup transition hidden">
+                                    <div class="ui  label">
+                                        <div class="ui images" style="font-size: inherit !important;">
+                                            <div class="image">
+                                                <!--rounded bordered 是边线和圆角-->
+                                                <div align="center" style="color: blue">github.com/pyb-hub</div>
+                                                <a href="https://github.com/pyb-hub">pyb-hub</a>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--qq联系方式链接-->
+                                <button id="qq" class="ui circular button icon ">
+                                    <i class="qq icon black large "></i>
+                                </button>
+                                <!--点击上面的赞赏弹出的内容-->
+                                <div class="ui qq flowing popup transition hidden">
+                                    <div class="ui  label">
+                                        <div class="ui images" style="font-size: inherit !important;">
+                                            <div class="image">
+                                                <!--rounded bordered 是边线和圆角-->
+                                                <img class="ui image rounded bordered" th:src="@{/image/qq.png}"
+                                                     src="../static/image/qq.png" style="width: 120px">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--weixin联系方式链接-->
+                                <button id="weixin" class="ui circular button icon">
+                                    <i class="weixin icon black large "></i>
+                                </button>
+                                <!--点击上面的赞赏弹出的内容-->
+                                <div class="ui weixin flowing popup transition hidden">
+                                    <div class="ui   label">
+                                        <div class="ui images" style="font-size: inherit !important;">
+                                            <div class="image">
+                                                <!--rounded bordered 是边线和圆角-->
+                                                <img class="ui image rounded bordered" th:src="@{/image/weixin.png}"
+                                                     src="../static/image/weixin1.png" style="width: 120px">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
+
                     </div>
                 </div>
 
@@ -318,8 +376,6 @@
         <br>
         <br>
     </div>
-
-</div>
 </div>
 
 <!--页面底部-->
@@ -364,7 +420,8 @@
         </div>
         <!--最底部的线-->
         <div class="ui inverted section divider"></div>
-        <p class="m-text-spaced  m-min-opacity m-text-thin"> Copyright © 2020-2021 All Rights Reserved Design by PYB</p>
+        <p class="m-text-spaced  m-min-opacity m-text-thin"> Copyright © 2020-2021 All Rights Reserved Designed by
+            PYB</p>
 
     </div>
 </footer>
@@ -375,6 +432,7 @@
 <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
 
 <script>
+    /*手机端菜单按钮*/
     $("#001").click(function () {
         $("#002").toggleClass('m-mobile-hide');
         $("#003").toggleClass('m-mobile-hide');
@@ -382,6 +440,22 @@
         $("#005").toggleClass('m-mobile-hide');
         $("#006").toggleClass('m-mobile-hide');
         $("#007").toggleClass('m-mobile-hide');
+    });
+    /*联系方式的超链接*/
+    $("#git").popup({
+        popup: $(".git"),
+        on: 'click',
+        position: 'bottom center'
+    });
+    $("#qq").popup({
+        popup: $(".qq"),
+        on: 'click',
+        position: 'bottom center'
+    });
+    $("#weixin").popup({
+        popup: $(".weixin"),
+        on: 'click',
+        position: 'bottom center'
     });
 </script>
 </body>
