--- a/src/main/resources/templates/admin/admin_about_1.html
+++ b/src/main/resources/templates/admin/admin_about_1.html
@@ -19,25 +19,39 @@
         <!--组件部分-->
         <div class="ui inverted secondary stackable menu fluid large">
             <!--五个标志部分-->
-            <a href="/index"><h1 class="ui teal header item">MBlog</h1></a>
-            <a href="/index" class="item m-text-lfat m-mobile-hide" id="002"><i class="home icon"></i>首页</a>
-            <a href="/type" class="item m-text-lfat m-mobile-hide" id="003"><i class="idea icon"></i>分类</a>
-            <a href="/tag" class="item m-text-lfat m-mobile-hide" id="004"><i class="tags icon"></i>标签</a>
-            <a href="/archive" class="item m-text-lfat m-mobile-hide" id="005"><i class="clone icon"></i>归档</a>
-            <a href="/about/01" class="active item m-text-lfat m-mobile-hide" id="006"><i class="info icon"></i>关于网站</a>
+            <a href="/admin/index"><h1 class="ui teal header item">MBlog</h1></a>
+            <a href="/admin/index" class="item m-text-lfat m-mobile-hide" id="002"><i class="home icon"></i>首页</a>
+            <a href="/admin/types/-1" class="item m-text-lfat m-mobile-hide" id="003"><i class="idea icon"></i>分类</a>
+            <a href="/admin/tags/-1" class="item m-text-lfat m-mobile-hide" id="004"><i class="tags icon"></i>标签</a>
+            <a href="/admin/archives" class="item m-text-lfat m-mobile-hide" id="005"><i class="clone icon"></i>归档</a>
+            <a href="/admin/about/1" class="active item m-text-lfat m-mobile-hide" id="006"><i class="info icon"></i>关于网站</a>
             <!--搜索栏-->
             <div class="right item m-mobile-hide" id="007">
-                <div class="ui icon input">
-                    <input type="text" placeholder="Search">
-                    <i class="search icon"></i>
+                <!--搜索要提交的地址-->
+                <form id="search_form" action="/admin/search" target="_blank" method="post">
+                    <div class="ui icon input">
+                        <input type="text" name="search" placeholder="Search">
+                        <!--点击搜索的icon会提交表单-->
+                        <i onclick="document.forms['search_form'].submit()" class="search link icon"></i>
+                    </div>
+                </form>
+            </div>
+            <!--用户登录导航栏-->
+            <div class="right menu m-mobile-hide item  m-padded-tb-min" id="008">
+                <div class=" ui dropdown item">
+                    <div class="text">
+                        <img class="ui avatar image" src="../../static/image/4.png" th:src="@{${session.user.avatar}}">
+                        <span th:text="${session.user.username}">admin</span>
+                    </div>
+                    <i class="dropdown icon"></i>
+                    <div class="menu">
+                        <a href="/admin/blogs_manage" class="item m-text-thin ">个人中心</a>
+                        <a href="/logout" class="item m-text-thin ">退出登录</a>
+                    </div>
                 </div>
             </div>
-            <!--登录注册-->
-            <a href="/login" class="active item m-text-lfat m-mobile-hide" id="008"><i class="login icon"></i>登录</a>
-            <a href="/register" class="item m-text-lfat m-mobile-hide" id="009"><i class="register icon"></i>注册</a>
         </div>
     </div>
-
     <a href="#" class="ui menu icon button m-right-top m-mobile-show" id="001" style="background: #393D49;">
         <div class="ui vertical animated button tiny">
             <div class="hidden content ">菜单</div>
@@ -58,13 +72,13 @@
                 <a class="active item">
                     <i class="home icon"></i> 关于本站
                 </a>
-                <a class="item" href="/about/02">
+                <a class="item" href="/admin/about/2">
                     <i class="mail icon"></i> 留言墙
                 </a>
             </div>
             <div class="item ">
                 <!--头像-->
-                <img src="image/2.jpg" alt="" class="ui circular centered image"
+                <img src="/image/2.jpg" alt="" class="ui circular centered image"
                      style="width: 280px">
                 <br>
                 <!--名字-->
@@ -85,7 +99,7 @@
 <br>
 <br>
 <!--页面底部-->
-<footer class="ui inverted attached segment m-padded-tb-medium " style="color: darkgrey">
+<footer class="ui inverted attached segment m-padded-tb-medium " style="background: #2c2c2c;">
     <div class="ui center aligned container">
 
         <div class="ui inverted divided grid stackable"><!--作用把页面分为16份-->
@@ -93,17 +107,16 @@
             <div class="three wide column">
                 <div class="ui inverted link list">
                     <div class="item">
-                        <img src="image/5.jpeg" class="ui rounded image" style="width: 110px">
+                        <img src="/image/5.jpeg" class="ui rounded image" style="width: 110px">
                     </div>
                 </div>
             </div>
             <!--第二栏文字-->
             <div class="three wide column">
-                <h4 class="ui inverted  m-text-thin m-text-spaced">最新博客</h4>
+                <h4 class="ui inverted  m-text-spaced">快速链接</h4>
                 <div class="ui inverted link list">
-                    <a href="#" class="item ">用户故事（User Story）</a>
-                    <a href="#" class="item ">用户故事（User Story）</a>
-                    <a href="#" class="item ">用户故事（User Story）</a>
+                    <a href="/admin/index" class="item m-text-lined">网站首页（Index）</a>
+                    <a href="/admin/about/2" class="item ">网站留言（Bbs）</a>
                 </div>
             </div>
             <!--第三栏文字-->
@@ -119,15 +132,17 @@
             <div class="seven wide column">
                 <div class="seven wide column">
                     <h4 class="ui inverted m-text-spaced">Blog</h4>
-                    <p class="m-text-spaced m-text-fat m-text-lined m-min-opacity">
+                    <p class="m-text-spaced  m-text-lined m-min-opacity">
                         这是我的个人博客、会分享关于编程、写作、思考相关的任何内容，希望可以给来到这儿的人有所帮助...</p>
                 </div>
             </div>
         </div>
         <!--最底部的线-->
-        <div class="ui inverted section divider"></div>
-        <p class="m-text-spaced  m-min-opacity m-text-thin"> Copyright © 2020-2021 All Rights Reserved Designed by PYB</p>
-
+        <div class="ui inverted section divider m-margin-tb-small">
+            <p class="m-min-opacity m-text-thin m-margin-tb-small" style="font-size: small">
+                Copyright © 2020-2021 All Rights Reserved Designed by PYB
+            </p>
+        </div>
     </div>
 </footer>
 
@@ -146,6 +161,8 @@
         $("#006").toggleClass('m-mobile-hide');
         $("#007").toggleClass('m-mobile-hide');
     });
+    /*头像下拉*/
+    $('.ui.dropdown').dropdown({});
 
 
 </script>
