--- a/src/main/resources/templates/admin/blogs_manage-input.html
+++ b/src/main/resources/templates/admin/blogs_manage-input.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
     <link rel="stylesheet" href="../../static/css/me.css" th:href="@{/css/me.css}">
     <!--引入文本输入框编辑器的css-->
-    <link rel="stylesheet" href="lib/editor/css/editormd.min.css">
+    <link rel="stylesheet" href="/lib/editor/css/editormd.min.css">
 </head>
 <body>
 
@@ -21,16 +21,16 @@
         <!--组件部分-->
         <div class="ui inverted secondary stackable menu fluid large">
             <!--3个标志部分-->
-            <a href="/index"><h1 class="ui teal header item">MBlog</h1></a>
-            <a href="#" class="active item m-text-lfat m-mobile-hide" id="002"><i class="home icon"></i>博客</a>
+            <a href="/admin/index"><h1 class="ui teal header item">MBlog</h1></a>
+            <a href="/admin/blogs_manage" class="active item m-text-lfat m-mobile-hide" id="002"><i class="home icon"></i>博客</a>
             <a href="/admin/types_manage" class="item m-text-lfat m-mobile-hide" id="003"><i class="idea icon"></i>分类</a>
-            <a href="#" class="item m-text-lfat m-mobile-hide" id="004"><i class="tags icon"></i>标签</a>
+            <a href="/admin/tags_manage" class="item m-text-lfat m-mobile-hide" id="004"><i class="tags icon"></i>标签</a>
             <!--用户登录导航栏-->
             <div class="right menu m-mobile-hide item  m-padded-tb-min" id="005">
                 <div class=" ui dropdown item">
                     <div class="text">
-                        <img class="ui avatar image" src="/image/4.png">
-                        admin
+                        <img class="ui avatar image" src="/image/4.png" th:src="@{${session.user.avatar}}">
+                        <span th:text="${session.user.username}">admin</span>
                     </div>
                     <i class="dropdown icon"></i>
                     <div class="menu">
@@ -52,10 +52,10 @@
 </nav>
 <!--二级导航:pointing:下面有个小箭头-->
 <div class="ui container m-container-normal">
-    <div class="ui  pointing menu m-margin-tb-large">
+    <div class="ui  pointing menu m-margin-tb-medium">
         <div class="right menu">
-            <a href="/admin/blogs_input" class="active teal item m-text-max">发布</a>
-            <a href="admin/blogs_manage" class="item">列表</a>
+            <a href="/admin/blogs_manage-input" class="active teal item m-text-max">发布</a>
+            <a href="/admin/blogs_manage" class="item">列表</a>
         </div>
     </div>
 </div>
@@ -66,20 +66,23 @@
         <h3 style="text-align: center;color: #393D49" class="ui  block header m-margin-t-small m-text-spaced attached">
             创作中...
         </h3>
-        <form action="#" method="post" class="ui form segment m-padded-tb-min attached">
+        <form id="blog_form" action="#" th:action="@{/admin/blogs_add}" method="post" class="ui form segment m-padded-tb-min attached">
+            <!--表示提交表单还是保存-->
+            <input name="published" type="hidden">
+            <!--required:表单验证-->
             <div class="required field">
                 <div class="ui left labeled input m-margin-tb-small ">
                     <!--下拉选择框-->
                     <!--blue basic label:设置颜色；compact和文字大小相同-->
                     <div class="ui selection dropdown compact blue basic label">
                         <!--隐藏域内容 1：代表原创；2：代表转载；3：代表翻译-->
-                        <input type="hidden" name="type" value="1">
+                        <input type="hidden" name="flag" value="原创">
                         <i class="dropdown icon"></i>
-                        <div class=" text">原创</div>
+                        <div class="text">原创</div>
                         <div class="menu">
-                            <div class="item" data-value="1">原创</div>
-                            <div class="item" data-value="2">转载</div>
-                            <div class="item" data-value="3">翻译</div>
+                            <div class="item" data-value="原创">原创</div>
+                            <div class="item" data-value="转载">转载</div>
+                            <div class="item" data-value="翻译">翻译</div>
                         </div>
                     </div>
                     <!--标题输入框-->
@@ -88,16 +91,7 @@
                 <!--博客内容，插件-->
                 <div class="field">
                     <div id="md-content" style="z-index: 1">
-                        <textarea name="content" placeholder="输入内容" style="display: none">
-                            <!--插件的语法-->
-#### Disabled options
-
-- TeX (Based on KaTeX);
-- Emoji;
-- Task lists;
-- HTML tags decode;
-- Flowchart and Sequence Diagram;
-                        </textarea>
+                        <textarea name="content" placeholder="输入内容" style="display: none"></textarea>
                     </div>
 
                 </div>
@@ -108,13 +102,12 @@
                 <div class="required field">
                     <div class="ui left labeled input m-margin-tb-small">
                         <div class="ui selection dropdown">
-                            <input type="hidden" name="kind">
+                            <input type="hidden" name="type.id"><!--自动分装到blog对象的属性中，定义形式要注意，要和属性中的对应-->
                             <i class="dropdown icon"></i>
                             <div class="default text">类别</div>
                             <div class="menu">
-                                <div class="item" data-value="1">基础技能</div>
-                                <div class="item" data-value="2">进阶技术</div>
-                                <div class="item" data-value="3">面试要点</div>
+                                <div th:each =" type : ${types}" th:data-value="${type.id}" th:text="${type.name}"
+                                     class="item" data-value="1">基础技能</div>
                             </div>
                         </div>
                     </div>
@@ -123,19 +116,17 @@
                 <div class="field">
                     <div class="ui left labeled input m-margin-tb-small">
                         <div class="ui multiple search selection dropdown">
-                            <input type="hidden">
+                            <input type="hidden" name="tagIds">
                             <i class="dropdown icon"></i>
                             <div class="default text">标签</div>
                             <div class="menu">
-                                <div class="item" data-value="javaSE">javaSE</div>
-                                <div class="item" data-value="javaEE">javaEE</div>
-                                <div class="item" data-value="jvm">jvm</div>
-                                <div class="item" data-value="database">database</div>
-                                <div class="item" data-value="多线程">多线程</div>
+                                <div th:each =" tag : ${tags}" th:data-value="${tag.id}" th:text="${tag.name}"
+                                     class="item" data-value="1">javaSE</div>
                             </div>
                         </div>
                     </div>
                 </div>
+
                 <!--三个组件按钮-->
                 <div class="inline fields ">
                     <!--推荐到首页-->
@@ -148,25 +139,36 @@
                     <!--转载信息-->
                     <div class="field">
                         <div class="ui checkbox ">
-                            <input type="checkbox" name="recommend" id="info">
-                            <label for="info">转载声明</label>
+                            <input type="checkbox" name="shareContent" id="shareContent">
+                            <label for="shareContent">转载声明</label>
                         </div>
                     </div>
                     <!--开启赞赏功能-->
                     <div class="field">
                         <div class="ui checkbox ">
-                            <input type="checkbox" name="recommend" id="reward">
-                            <label for="reward">赞赏</label>
+                            <input type="checkbox" name="appreciation" id="appreciation">
+                            <label for="appreciation">赞赏</label>
                         </div>
                     </div>
                     <!--开启评论-->
                     <div class="field">
                         <div class="ui checkbox ">
-                            <input type="checkbox" name="recommend" id="comment">
-                            <label for="comment">评论</label>
+                            <input type="checkbox" name="commentabled" id="commentabled">
+                            <label for="commentabled">评论</label>
                         </div>
                     </div>
                 </div>
+            </div>
+            <!--首图片地址-->
+            <div class="required field m-margin-bottom-medium">
+                <div class="ui left labeled input">
+                    <label  class="ui blue basic label">首图</label>
+                    <input type="text" name="firstPicture" placeholder="展示页图片引用地址">
+                </div>
+            </div>
+            <!--博客首页描述-->
+            <div class="required field">
+                <textarea name="description" placeholder="博客首页展示描述" maxlength="200"></textarea>
             </div>
             <!--存放错误信息-->
             <div class="ui error message"></div>
@@ -181,29 +183,36 @@
                 </div>
                 <!--保存按钮-->
                 <div class="field">
-                    <button type="button" class="ui teal small button  m-margin-tb-small"><i
+                    <button type="button" id="save-btn" class="ui teal small button  m-margin-tb-small"><i
                             class="save icon"></i>保存
                     </button>
                 </div>
                 <!--提交按钮-->
                 <div class="field">
-                    <button class="ui blue small button  m-margin-tb-small"><i
+                    <button type="button" id="publish-btn" class="ui blue small button  m-margin-tb-small"><i
                             class="edit icon"></i>发布
                     </button>
                 </div>
             </div>
-
         </form>
     </div>
 </div>
 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 <!--jquery引入-->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 <!--js引入-->
 <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
 <!--文本输入框的插件的js引入-->
-<script src="lib/editor/editormd.min.js"></script>
+<script src="/lib/editor/editormd.min.js"></script>
 
 <!--页面的js-->
 <script>
@@ -214,7 +223,7 @@
             width   : "100%",
             height  : 640,
             syncScrolling : "single",
-            path    : "lib/editor/lib/"
+            path    : "/lib/editor/lib/"
         });
     });
 
@@ -230,38 +239,59 @@
     /*下拉框*/
     $('.ui.dropdown').dropdown({});
 
-    /*表单验证*/
+    /*提交的表单验证*/
     $('.ui.form').form({
         fields: {
             title: {
                 identifier: 'title',
                 rules: [{
                     type: 'empty',
-                    prompt: '标题：请输入博客标题'
+                    prompt: '请输入博客标题'
                 }]
             },
             content: {
                 identifier: 'content',
                 rules: [{
                     type: 'empty',
-                    prompt: '标题：请输入博客内容'
+                    prompt: '请输入博客内容'
                 }]
             },
-            kind: {
-                identifier: 'kind',
+            typeId: {
+                identifier: 'type.id',
                 rules: [{
-                    typeId: 'empty',
-                    prompt: '标题：请输入博客分类'
+                    type: 'empty',
+                    prompt: '请输入博客分类'
                 }]
             },
             firstPicture: {
                 identifier: 'firstPicture',
                 rules: [{
                     type: 'empty',
-                    prompt: '标题：请输入博客首图'
+                    prompt: '请输入博客首图地址'
+                }]
+            },
+            description: {
+                identifier: 'description',
+                rules: [{
+                    type: 'empty',
+                    prompt: '请输入博客首页描述'
                 }]
             }
         }
+    });
+
+    /*提交和保存的按钮动作*/
+    $('#save-btn').click(function () {
+        /*点击后name为published的隐藏域保存false的值*/
+        $('[name="published"]').val(false);
+        /*提交表单*/
+        $('#blog_form').submit();
+    });
+    $('#publish-btn').click(function () {
+        /*点击后name为published的隐藏域保存true的值*/
+        $('[name="published"]').val(true);
+        /*提交表单*/
+        $('#blog_form').submit();
     });
 
 </script>
