--- a/src/main/resources/templates/admin/tags_manage.html
+++ b/src/main/resources/templates/admin/tags_manage.html
@@ -19,16 +19,16 @@
         <!--组件部分-->
         <div class="ui inverted secondary stackable menu fluid large">
             <!--3个标志部分-->
-            <a href="/index"><h1 class="ui teal header item">MBlog</h1></a>
+            <a href="/admin/index"><h1 class="ui teal header item">MBlog</h1></a>
             <a href="/admin/blogs_manage" class="item m-text-lfat m-mobile-hide" id="002"><i class="home icon"></i>博客</a>
             <a href="/admin/types_manage" class="item m-text-lfat m-mobile-hide" id="003"><i class="idea icon"></i>分类</a>
-            <a href="#" class="active item m-text-lfat m-mobile-hide" id="004"><i class="tags icon"></i>标签</a>
+            <a href="/admin/tags_manage" class="active item m-text-lfat m-mobile-hide" id="004"><i class="tags icon"></i>标签</a>
             <!--用户登录导航栏-->
             <div class="right menu m-mobile-hide item  m-padded-tb-min" id="005">
                 <div class=" ui dropdown item">
                     <div class="text" >
-                        <img class="ui avatar image" src="/image/4.png">
-                        admin
+                        <img class="ui avatar image" src="/image/4.png" th:src="@{${session.user.avatar}}">
+                        <span th:text="${session.user.username}">admin</span>
                     </div>
                     <i class="dropdown icon"></i>
                     <div class="menu">
@@ -50,7 +50,7 @@
 </nav>
 <!--二级导航:pointing:下面有个小箭头-->
 <div class="ui container m-container-normal">
-    <div class="ui  pointing menu m-margin-tb-large">
+    <div class="ui  pointing menu m-margin-tb-medium">
         <div class="right menu">
             <a href="#" th:href="@{/admin/tags_manage}" class="active teal item">列表</a>
             <a href="#" th:href="@{/admin/tags_manage/input}" class="item">修改</a>
@@ -75,8 +75,8 @@
             <i class="close icon m-right"></i>
             <div class="header">提示信息：</div>
             <p th:text="${errormessage}"></p>
-
         </div>
+
         <h2 style="text-align: center;color: #393D49" class="ui block header m-text-spaced attached">
             标签列表
         </h2>
