mblog博客系统version：1，前后端全部完成；

--- a/src/main/resources/templates/admin/admin_blog.html
+++ b/src/main/resources/templates/admin/admin_blog.html
@@ -659,7 +659,8 @@
     });
 
     /*文章的链接:server服务器的地址，部署后要更改*/
-    var server = "http://localhost:8080";
+    var server = "http://47.114.37.215:8080";
+
     /*theleaf模板需要在前面script引入th:inline="javascript"*/
     var url = /*[[@{/admin/blog/{id}(id=${blog.id})}]]*/ "";
     /*文章生成微信阅读的二维码链接*/
