--- a/src/main/resources/templates/error/error.html
+++ b/src/main/resources/templates/error/error.html
@@ -5,8 +5,45 @@
     <title>error</title>
 </head>
 <body>
-<h1><font color="red" >发生错误~~</font></h1>
+<!--导航栏-->
+<nav class="ui attached segment m-padded-tb-min m-shadow-small" style="background: #393D49;">
+    <div class="ui container">
+        <!--组件部分-->
+        <div class="ui inverted secondary stackable menu fluid large">
+            <!--七个标志部分-->
+            <a href="/index"><h1 class="ui teal header item">MBlog</h1></a>
+            <a href="/index" class="item m-text-lfat m-mobile-hide" id="002"><i class="home icon"></i>首页</a>
+            <a href="/types/-1" class="item m-text-lfat m-mobile-hide" id="003"><i class="idea icon"></i>分类</a>
+            <a href="/tags/-1" class="item m-text-lfat m-mobile-hide" id="004"><i class="tags icon"></i>标签</a>
+            <a href="/archives" class="item m-text-lfat m-mobile-hide" id="005"><i class="clone icon"></i>归档</a>
+            <a href="/about/1" class="item m-text-lfat m-mobile-hide" id="006"><i class="info icon"></i>关于网站</a>
 
+            <!--搜索栏-->
+            <div class="right item m-mobile-hide" id="007">
+                <!--搜索要提交的地址-->
+                <form id="search_form" action="/search" target="_blank" method="post">
+                    <div class="ui icon input">
+                        <input type="text" name="search" placeholder="Search">
+                        <!--点击搜索的icon会提交表单-->
+                        <i onclick="document.forms['search_form'].submit()" class="search link icon"></i>
+                    </div>
+                </form>
+            </div>
+            <!--登录注册-->
+            <a href="/login" class="item m-text-lfat m-mobile-hide  m-margin-l-max" id="008">登录</a>
+            <a href="/register" class="item m-text-lfat m-mobile-hide m-margin-l-min" id="009">注册</a>
+        </div>
+    </div>
+    <a href="#" class="ui menu icon button m-right-top m-mobile-show" id="001" style="background: #393D49;">
+        <div class="ui vertical animated button tiny">
+            <div class="hidden content ">菜单</div>
+            <div class="visible content ">
+                <i class="sidebar icon"></i>
+            </div>
+        </div>
+    </a>
+</nav>
+<h1><font color="red" >发生错误~~</font></h1>
 
 <div>
     <!--获取异常modelandview对象，把对象中的信息输出到浏览器页面-->
@@ -18,6 +55,35 @@
     </ul>
     <div th:utext="'--&gt;'" th:remove="tag"></div>
 </div>
+<!--底部-->
+<div class="m-padded-tb-medium ">
+    <div class="ui container m-container-normal">
+        <div class="ui attached segment ">
+            <div class="ui secondary pointing menu ">
+                <a class="active item">
+                    <i class="home icon"></i> 关于本站
+                </a>
+                <a class="item" href="/about/2">
+                    <i class="mail icon"></i> 留言墙
+                </a>
+            </div>
+            <div class="item ">
+                <!--头像-->
+                <img src="/image/2.jpg" alt="" class="ui circular centered image"
+                     style="width: 280px">
+                <br>
+                <!--名字-->
+                <div class="ui sliver segment">
+                    <h1 class="ui header centered m-text-spaced m-text-lfat m-text-small-lined">MBLOG</h1>
+                </div>
+            </div>
+            <div class="item m-padded-lr-responsive m-padded-tb-large-responsive teal m-text-spaced" style="text-align: center">
+                <p>MBLOG的博客是一个由个人开发的博客网站，后端使用SpringBoot + Mybatis + Redis，前端框架使用Semantic。于2020年04月20日开发。
+                    本站采用华为云提供的服务器ECS和阿里云的存储对象OSS。</p>
+            </div>
+        </div>
 
+    </div>
+</div>
 </body>
 </html>
