--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -45,7 +45,7 @@
                 </form>
             </div>
             <!--登录注册-->
-            <a href="/login" class="item m-text-lfat m-mobile-hide  m-margin-l-max" id="008">登录</a>
+            <a href="/login" class="item m-text-lfat m-mobile-hide" id="008">登录</a>
             <a href="/register" class="item m-text-lfat m-mobile-hide m-margin-l-min" id="009">注册</a>
         </div>
     </div>
