--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -38,7 +38,7 @@
                 </form>
             </div>
             <!--登录注册-->
-            <a href="/login" class="item m-text-lfat m-mobile-hide  m-margin-l-max" id="008">登录</a>
+            <a href="/login" class="item m-text-lfat m-mobile-hide " id="008">登录</a>
             <a href="/register" class="item m-text-lfat m-mobile-hide m-margin-l-min" id="009">注册</a>
         </div>
     </div>
@@ -74,10 +74,10 @@
             <!--分类的标志-->
             <div class="ui m-margin-lr-tiny m-margin-tb-small">
                 <a href="#" th:href="@{/tags/{id}(id=${tag.id})}"
-                   class="ui tag label m-margin-lr-medium"
+                   class="ui tag label m-margin-lr-small m-margin-tb-tiny"
                    th:classappend="${tag.id==activeTagId} ? 'purple'" th:each="tag : ${tags}">
                     <span th:text="${tag.name}" style="font-size: small">springboot</span>
-                    <div class="floating ui mini red label">...</div><!-- th:text="${#arrays.length(tag.blogs)}"-->
+                    <!--<div class="floating ui mini red label">...</div>--><!-- th:text="${#arrays.length(tag.blogs)}"-->
                 </a>
             </div>
         </div>
@@ -173,6 +173,15 @@
     </div>
 </div>
 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <br>
 <br>
 <br>
