--- a/src/main/resources/templates/about_1.html
+++ b/src/main/resources/templates/about_1.html
@@ -37,7 +37,7 @@
                 </form>
             </div>
             <!--登录注册-->
-            <a href="/login" class="item m-text-lfat m-mobile-hide  m-margin-l-max" id="008">登录</a>
+            <a href="/login" class="item m-text-lfat m-mobile-hide " id="008">登录</a>
             <a href="/register" class="item m-text-lfat m-mobile-hide m-margin-l-min" id="009">注册</a>
         </div>
     </div>
@@ -85,7 +85,10 @@
     </div>
 </div>
 
-
+<br>
+<br>
+<br>
+<br>
 <br>
 <br>
 <!--页面底部-->
