--- a/src/main/resources/templates/admin/admin_archives_1.html
+++ b/src/main/resources/templates/admin/admin_archives_1.html
@@ -19,16 +19,16 @@
         <!--组件部分-->
         <div class="ui inverted secondary stackable menu fluid large">
             <!--五个标志部分-->
-            <a href="/index"><h1 class="ui teal header item">MBlog</h1></a>
-            <a href="/index" class="item m-text-lfat m-mobile-hide" id="002"><i class="home icon"></i>首页</a>
-            <a href="/types/-1" class="item m-text-lfat m-mobile-hide" id="003"><i class="idea icon"></i>分类</a>
-            <a href="/tags/-1" class="item m-text-lfat m-mobile-hide" id="004"><i class="tags icon"></i>标签</a>
-            <a href="/archives" class="active item m-text-lfat m-mobile-hide" id="005"><i class="clone icon"></i>归档</a>
-            <a href="/about/1" class="item m-text-lfat m-mobile-hide" id="006"><i class="info icon"></i>关于网站</a>
+            <a href="/admin/index"><h1 class="ui teal header item">MBlog</h1></a>
+            <a href="/admin/index" class="item m-text-lfat m-mobile-hide" id="002"><i class="home icon"></i>首页</a>
+            <a href="/admin/types/-1" class="item m-text-lfat m-mobile-hide" id="003"><i class="idea icon"></i>分类</a>
+            <a href="/admin/tags/-1" class="item m-text-lfat m-mobile-hide" id="004"><i class="tags icon"></i>标签</a>
+            <a href="/admin/archives" class="active item m-text-lfat m-mobile-hide" id="005"><i class="clone icon"></i>归档</a>
+            <a href="/admin/about/1" class="item m-text-lfat m-mobile-hide" id="006"><i class="info icon"></i>关于网站</a>
             <!--搜索栏-->
             <div class="right item m-mobile-hide" id="007">
                 <!--搜索要提交的地址-->
-                <form id="search_form" action="/search" target="_blank" method="post">
+                <form id="search_form" action="/admin/search" target="_blank" method="post">
                     <div class="ui icon input">
                         <input type="text" name="search" placeholder="Search">
                         <!--点击搜索的icon会提交表单-->
@@ -36,9 +36,20 @@
                     </div>
                 </form>
             </div>
-            <!--登录注册-->
-            <a href="/login" class="item m-text-lfat m-mobile-hide " id="008">登录</a>
-            <a href="/register" class="item m-text-lfat m-mobile-hide m-margin-l-min" id="009">注册</a>
+            <!--用户登录导航栏-->
+            <div class="right menu m-mobile-hide item  m-padded-tb-min" id="008">
+                <div class=" ui dropdown item">
+                    <div class="text">
+                        <img class="ui avatar image" src="../../static/image/4.png" th:src="@{${session.user.avatar}}">
+                        <span th:text="${session.user.username}">admin</span>
+                    </div>
+                    <i class="dropdown icon"></i>
+                    <div class="menu">
+                        <a href="/admin/blogs_manage" class="item m-text-thin ">个人中心</a>
+                        <a href="/logout" class="item m-text-thin ">退出登录</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <a href="#" class="ui menu icon button m-right-top m-mobile-show" id="001" style="background: #393D49;">
@@ -49,6 +60,7 @@
             </div>
         </div>
     </a>
+
 </nav>
 
 
@@ -62,7 +74,15 @@
                     <span class="m-text-spaced m-text-lfat" style="font-size: large;color: teal">
                         文章归档
                     </span>
+                    <!--二级导航-->
+                    <div class="ui mini left attached button m-padded-small">
+                        <a href="#" th:href="@{/admin/archives}"  class="m-text-lfat" style="color: teal">全站</a>
+                    </div>
+                    <div class="ui button right mini attached m-padded-small">
+                        <a href="#" th:href="@{/admin/archives/2}" style="color: #393D49">我的</a>
+                    </div>
                 </div>
+
                 <div class="right aligned column">
                     共 <h2 class="ui orange header m-inline-block m-text-thin" th:text="${blogsNum}"> 114 </h2> 篇
                 </div>
@@ -73,7 +93,7 @@
             <h3 class="ui center aligned header" th:text="${item.key}">2017</h3>
 
             <div class="ui fluid vertical menu">
-                <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" class="item" target="_blank" th:each="blog : ${item.value}">
+                <a href="#" th:href="@{/admin/blog/{id}(id=${blog.id})}" class="item" target="_blank" th:each="blog : ${item.value}">
                 <span>
                     <i class="teal circle icon"></i>
                     <span th:text="${blog.title}"  style="font-size: medium">
@@ -83,34 +103,35 @@
 
                 </span>
                     <span class="m-right">
-                        <div class="ui orange  label" th:text="${blog.flag}">原创</div>
+                        <div class="ui orange label" th:text="${blog.flag}">原创</div>
                     </span>
                 </a>
             </div>
         </th:block>
-
     </div>
 </div>
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <!--页面底部-->
 <footer class="ui inverted attached segment m-padded-tb-medium " style="background: #2c2c2c;">
     <div class="ui center aligned container">
@@ -128,8 +149,8 @@
             <div class="three wide column">
                 <h4 class="ui inverted  m-text-spaced">快速链接</h4>
                 <div class="ui inverted link list">
-                    <a href="/index" class="item m-text-lined">网站首页（Index）</a>
-                    <a href="/about/2" class="item ">网站留言（Bbs）</a>
+                    <a href="/admin/index" class="item m-text-lined">网站首页（Index）</a>
+                    <a href="/admin/about/2" class="item ">网站留言（Bbs）</a>
                 </div>
             </div>
             <!--第三栏文字-->
@@ -158,6 +179,7 @@
         </div>
     </div>
 </footer>
+
 <!--jquery引入-->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 <!--js引入-->
@@ -175,7 +197,8 @@
         $("#008").toggleClass('m-mobile-hide');
         $("#009").toggleClass('m-mobile-hide');
     });
-
+    /*头像下拉*/
+    $('.ui.dropdown').dropdown({});
 
 </script>
 </body>
