--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -36,7 +36,7 @@
                 </form>
             </div>
             <!--登录注册-->
-            <a href="/login" class="item m-text-lfat m-mobile-hide  m-margin-l-max" id="008">登录</a>
+            <a href="/login" class="item m-text-lfat m-mobile-hide " id="008">登录</a>
             <a href="/register" class="item m-text-lfat m-mobile-hide m-margin-l-min" id="009">注册</a>
         </div>
     </div>
@@ -56,35 +56,53 @@
 
 
 <!--页面底部-->
-<div class="m-padded-tb-medium ">
-    <div class="ui container m-container-normal">
-        <div class="ui attached segment ">
-            <div class="ui secondary pointing menu ">
-                <a class="active item">
-                    <i class="home icon"></i> 关于本站
-                </a>
-                <a class="item" href="/about/2">
-                    <i class="mail icon"></i> 留言墙
-                </a>
-            </div>
-            <div class="item ">
-                <!--头像-->
-                <img src="/image/2.jpg" alt="" class="ui circular centered image"
-                     style="width: 280px">
-                <br>
-                <!--名字-->
-                <div class="ui sliver segment">
-                    <h1 class="ui header centered m-text-spaced m-text-lfat m-text-small-lined">MBLOG</h1>
+<!--页面底部-->
+<footer class="ui inverted attached segment m-padded-tb-medium " style="background: #2c2c2c;">
+    <div class="ui center aligned container">
+
+        <div class="ui inverted divided grid stackable"><!--作用把页面分为16份-->
+            <!--第一栏二维码-->
+            <div class="three wide column">
+                <div class="ui inverted link list">
+                    <div class="item">
+                        <img src="/image/5.jpeg" class="ui rounded image" style="width: 110px">
+                    </div>
                 </div>
             </div>
-            <div class="item m-padded-lr-responsive m-padded-tb-large-responsive teal m-text-spaced" style="text-align: center">
-                <p>MBLOG的博客是一个由个人开发的博客网站，后端使用SpringBoot + Mybatis + Redis，前端框架使用Semantic。于2020年04月20日开发。
-                    本站采用华为云提供的服务器ECS和阿里云的存储对象OSS。</p>
+            <!--第二栏文字-->
+            <div class="three wide column">
+                <h4 class="ui inverted  m-text-spaced">快速链接</h4>
+                <div class="ui inverted link list">
+                    <a href="/index" class="item m-text-lined">网站首页（Index）</a>
+                    <a href="/about/2" class="item ">网站留言（Bbs）</a>
+                </div>
+            </div>
+            <!--第三栏文字-->
+            <div class="three wide column">
+                <h4 class="ui inverted m-text-spaced">联系我</h4>
+                <div class="ui inverted link list">
+                    <a href="#" class="item  m-text-thin m-text-lined">Email: pyb1997@qq.com</a>
+                    <a href="#" class="item  m-text-thin ">QQ: 1875126370</a>
+
+                </div>
+            </div>
+            <!--第四栏文字-->
+            <div class="seven wide column">
+                <div class="seven wide column">
+                    <h4 class="ui inverted m-text-spaced">Blog</h4>
+                    <p class="m-text-spaced  m-text-lined m-min-opacity">
+                        这是我的个人博客、会分享关于编程、写作、思考相关的任何内容，希望可以给来到这儿的人有所帮助...</p>
+                </div>
             </div>
         </div>
-
+        <!--最底部的线-->
+        <div class="ui inverted section divider m-margin-tb-small">
+            <p class="m-min-opacity m-text-thin m-margin-tb-small" style="font-size: small">
+                Copyright © 2020-2021 All Rights Reserved Designed by PYB
+            </p>
+        </div>
     </div>
-</div>
+</footer>
 <!--jquery引入-->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 <!--js引入-->
