--- a/src/main/resources/templates/error/admin_error.html
+++ b/src/main/resources/templates/error/admin_error.html
@@ -2,32 +2,26 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <!--定义移动端缩放，比例变化-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404</title>
-    <!--css引入-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
-    <link rel="stylesheet" href="../../static/css/me.css" th:href="@{/css/me.css}">
+    <title>error</title>
 </head>
 <body>
-<!--nav:导航部分-->
-<!--条:segment;黑色:inverted反转色-->
+<!--导航栏-->
 <nav class="ui attached segment m-padded-tb-min m-shadow-small" style="background: #393D49;">
     <div class="ui container">
         <!--组件部分-->
         <div class="ui inverted secondary stackable menu fluid large">
             <!--七个标志部分-->
-            <a href="/index"><h1 class="ui teal header item">MBlog</h1></a>
-            <a href="/index" class="item m-text-lfat m-mobile-hide" id="002"><i class="home icon"></i>首页</a>
-            <a href="/types/-1" class="item m-text-lfat m-mobile-hide" id="003"><i class="idea icon"></i>分类</a>
-            <a href="/tags/-1" class="item m-text-lfat m-mobile-hide" id="004"><i class="tags icon"></i>标签</a>
-            <a href="/archives" class="item m-text-lfat m-mobile-hide" id="005"><i class="clone icon"></i>归档</a>
-            <a href="/about/1" class="item m-text-lfat m-mobile-hide" id="006"><i class="info icon"></i>关于网站</a>
+            <a href="/admin/index"><h1 class="ui teal header item">MBlog</h1></a>
+            <a href="/admin/index" class="item m-text-lfat m-mobile-hide" id="002"><i class="home icon"></i>首页</a>
+            <a href="/admin/types/-1" class="item m-text-lfat m-mobile-hide" id="003"><i class="idea icon"></i>分类</a>
+            <a href="/admin/tags/-1" class="item m-text-lfat m-mobile-hide" id="004"><i class="tags icon"></i>标签</a>
+            <a href="/admin/archives" class="item m-text-lfat m-mobile-hide" id="005"><i class="clone icon"></i>归档</a>
+            <a href="/admin/about/1" class="item m-text-lfat m-mobile-hide" id="006"><i class="info icon"></i>关于网站</a>
 
             <!--搜索栏-->
             <div class="right item m-mobile-hide" id="007">
                 <!--搜索要提交的地址-->
-                <form id="search_form" action="/search" target="_blank" method="post">
+                <form id="search_form" action="/admin/search" target="_blank" method="post">
                     <div class="ui icon input">
                         <input type="text" name="search" placeholder="Search">
                         <!--点击搜索的icon会提交表单-->
@@ -35,9 +29,20 @@
                     </div>
                 </form>
             </div>
-            <!--登录注册-->
-            <a href="/login" class="item m-text-lfat m-mobile-hide " id="008">登录</a>
-            <a href="/register" class="item m-text-lfat m-mobile-hide m-margin-l-min" id="009">注册</a>
+            <!--用户登录导航栏-->
+            <div class="right menu m-mobile-hide item  m-padded-tb-min" id="008">
+                <div class=" ui dropdown item">
+                    <div class="text">
+                        <img class="ui avatar image" src="../../static/image/4.png" th:src="@{${session.user.avatar}}">
+                        <span th:text="${session.user.username}">admin</span>
+                    </div>
+                    <i class="dropdown icon"></i>
+                    <div class="menu">
+                        <a href="/admin/blogs_manage" class="item m-text-thin ">个人中心</a>
+                        <a href="/logout" class="item m-text-thin ">退出登录</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <a href="#" class="ui menu icon button m-right-top m-mobile-show" id="001" style="background: #393D49;">
@@ -49,16 +54,18 @@
         </div>
     </a>
 </nav>
+<h1><font color="red" >发生错误~~</font></h1>
 
-
-<div class="container m-container-min m-padded-tb ">
-    <h2 style="text-align: center;color: #393D49" class="ui block header m-text-spaced attached">
-        你访问的资源不存在~
-    </h2>
-    <img src="/image/404.gif" class="ui fluid image" >
+<div>
+    <!--获取异常modelandview对象，把对象中的信息输出到浏览器页面-->
+    <div th:utext="'&lt;!--'" th:remove="tag"></div>
+    <div th:utext="'Fail request url: '+ ${url}" th:remove="tag"></div>
+    <div th:utext="'Exception msg: '+ ${exception.message}" th:remove="tag"></div>
+    <ul th:remove="tag">
+        <li th:each="st : ${exception.stackTrace}" th:remove="tag"><span th:utext="${st}" th:remove="tag"></span></li>
+    </ul>
+    <div th:utext="'--&gt;'" th:remove="tag"></div>
 </div>
-
-
 <!--页面底部-->
 <footer class="ui inverted attached segment m-padded-tb-medium " style="background: #2c2c2c;">
     <div class="ui center aligned container">
@@ -76,8 +83,8 @@
             <div class="three wide column">
                 <h4 class="ui inverted  m-text-spaced">快速链接</h4>
                 <div class="ui inverted link list">
-                    <a href="/index" class="item m-text-lined">网站首页（Index）</a>
-                    <a href="/about/2" class="item ">网站留言（Bbs）</a>
+                    <a href="/admin/index" class="item m-text-lined">网站首页（Index）</a>
+                    <a href="/admin/about/2" class="item ">网站留言（Bbs）</a>
                 </div>
             </div>
             <!--第三栏文字-->
@@ -106,23 +113,5 @@
         </div>
     </div>
 </footer>
-<!--jquery引入-->
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
-<!--js引入-->
-<script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
-
-<script>
-    /*适应手机端隐藏状态栏*/
-    $("#001").click(function () {
-        $("#002").toggleClass('m-mobile-hide');
-        $("#003").toggleClass('m-mobile-hide');
-        $("#004").toggleClass('m-mobile-hide');
-        $("#005").toggleClass('m-mobile-hide');
-        $("#006").toggleClass('m-mobile-hide');
-        $("#007").toggleClass('m-mobile-hide');
-    });
-
-
-</script>
 </body>
 </html>
