mblog博客系统version：1.6； 上线到服务器版本，完成底部栏备案信息添加；

--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -590,8 +590,12 @@
         </div>
         <!--最底部的线-->
         <div class="ui inverted section divider m-margin-tb-small">
-            <p class="m-min-opacity m-text-thin m-margin-tb-small" style="font-size: small">
+            <p class="m-min-opacity  m-margin-tb-tiny" style="font-size: small">
                 Copyright © 2020-2021 All Rights Reserved Designed by PYB
+                <br>
+                <a href="http://www.beian.miit.gov.cn/" style="color: whitesmoke">
+                    浙ICP备20015416号
+                </a>
             </p>
         </div>
     </div>
