mblog博客系统version：1.6； 上线到服务器版本，完成底部栏备案信息添加；

--- a/src/main/resources/templates/admin/admin_types.html
+++ b/src/main/resources/templates/admin/admin_types.html
@@ -223,7 +223,7 @@
             </div>
         </div>
         <!--最底部的线-->
-        <div class="ui inverted section divider m-margin-tb-small">
+        <div class="ui inverted section divider m-text-thin m-margin-tb-small">
             <p class="m-min-opacity  m-margin-tb-tiny" style="font-size: small">
                 Copyright © 2020-2021 All Rights Reserved Designed by PYB
                 <br>
