--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -589,7 +589,7 @@
             </div>
         </div>
         <!--最底部的线-->
-        <div class="ui inverted section divider m-margin-tb-small">
+        <div class="ui inverted section divider m-margin-tb-small m-text-thin">
             <p class="m-min-opacity  m-margin-tb-tiny" style="font-size: small">
                 Copyright © 2020-2021 All Rights Reserved Designed by PYB
                 <br>
@@ -641,7 +641,7 @@
     });
 
     /*文章的链接:server服务器的地址，部署后要更改*/
-    var server = "http://182.92.235.82:9000";
+    var server = "http://pybhh.top";
 
     /*theleaf模板需要在前面script引入th:inline="javascript"*/
     var url = /*[[@{/blog/{id}(id=${blog.id})}]]*/ "";
