--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -345,7 +345,7 @@
             </div>
         </div>
         <!--最底部的线-->
-        <div class="ui inverted section divider m-margin-tb-small">
+        <div class="ui inverted section divider m-margin-tb-small m-text-thin">
             <p class="m-min-opacity  m-margin-tb-tiny" style="font-size: small">
                 Copyright © 2020-2021 All Rights Reserved Designed by PYB
                 <br>
